# act-lightcurve-viewer

./: .gitignore  LICENSE  README.md  all_detected_flares.csv  biermann_events_clean.csv  check_biermann.py  compare_plots.py  debug.py  detected_flares.csv  eval_polarization.py  file_io.py  final_detected_flares.csv  matched_biermann_flares.csv  new_detected_flares.csv  plot_pol_snr.py  plotting.py  polarization_summary.csv  polarization_summary_table.csv  processing.py  pyproject.toml  remove_biermann.py  requirements.txt  run_pipeline.py  script.py  sorted_new_flares.csv
act_lightcurve_viewer/: file_io.py  plotting.py  processing.py  transients.py
data/: biermann_transient_candidates.txt
tests/: test_transient_class.py
