[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "act-lightcurve-viewer"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "pixell",
    "h5py",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "coverage",
    "pytest-cov",
    "pre-commit",
]


[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F841"]
