[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "act-lightcurve-viewer"
version = "0.0.2"
requires-python = ">=3.11"
dependencies = [
    "pixell",
    "numpy",
    "matplotlib",
    "astropy",
    "h5py",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["act_lightcurve_viewer*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "coverage",
    "pytest-cov",
    "pre-commit",
]


[tool.uv.extra-build-dependencies]
pixell = ["numpy"]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F841"]
